# cookiecutter-pyhipsterdev

./: .gitignore  Makefile  README.md  cookiecutter.json
hooks/: post_get_project.py
{{cookiecutter.app_name}}/: .dockerignore  .gitignore  Dockerfile  Makefile  Pipfile  README.md  markdown.config.js  requirements_dev.txt  setup.cfg  setup.py  tox.ini
{{cookiecutter.app_name}}/{{cookiecutter.app_name}}/: .cookiecutter.yaml  __main__.py
