[bdist_wheel]
universal=1

[coverage:run]
omit = tests/*

[metadata]
description-file=README.md

[wheel]
universal = 1

[isort]
line_length=120
indent='    '
multi_line_output=3
length_sort=1

[pylama:pycodestyle]
max_line_length = 120

[yapf]
based_on_style = pep8
indent_dictionary_value = True

[tool:pytest]
addopts =--pylama --cov={{cookiecutter.app_name}} --cov-report=term-missing
cov = {{cookiecutter.app_name}}
cov-config = .coveragerc
filterwarnings = ignore:.*Module already imported.*:Warning

[pytest-watch]
nobeep = True
